wordpress/overlays/matbao.com/nginx-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: wordpress
  labels:
    app: matbao-website-wp
spec:
  ingressClassName: nginx
  rules:
  - host: matbao.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-wp
            port:
              number: 80
